# fra-rss

./: .gitignore  README.md  example-page.html  generate.sh  make_rss.py  pyproject.toml  scrapy.cfg  test_server.sh  upload.py
.github/workflows/: publish-feeds.yaml
fra_rss/: items.py  middlewares.py  pipelines.py  settings.py
fra_rss/spiders/: newsroom.py
